<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LampApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="red_label_text">Red:</string>
    <string name="green_label_text">Green:</string>
    <string name="blue_label_text">Blue:</string>
    <string name="lamp_online_status_string">Lamp online</string>
    <string name="lamp_offline_status_string">Lamp offline</string>
    <string name="title_activity_secondary">MessageReceiver</string>
    <string name="connect_button_text">Connect</string>
    <string name="table_header">Parameters</string>
    <string name="hold_label_text">Hold:</string>
    <string name="speed_label_text">Speed:</string>
    <string name="bright_label_text">Bright:</string>
    <string name="settings_bg_color_confirm">Hello!</string>
    <string name="settings_default_color_confirm">Hello?</string>

</resources>
